[package]
name = "remoc-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
remoc = "0.9.6"
remoc_macro = { version = "=0.9.6", optional = true }
futures = "0.3"
tokio = { version = "1.11", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"], optional = true }
rand = "0.8"
tracing = "0.1.29"
bytes = "1"
byteorder = "1.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
async-trait = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }
serde_cbor = { version = "0.11", optional = true }
rmp-serde = { version = "0.15", optional = true }
