[package]
name = "remoc-test"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
remoc = "0.9.7"
futures = "0.3"
tokio = { version = "1.11", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
